--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "yargs": "^5.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.16.0",
     "babel-eslint": "^6.0.0-beta.6",
     "babel-plugin-istanbul": "^2.0.1",
     "chai": "^3.4.1",
@@ -127,6 +128,7 @@
     "eslint-plugin-react": "^6.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "karma": "^1.0.0",
     "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.0.1",
@@ -138,6 +140,7 @@
     "phantomjs-prebuilt": "^2.1.12",
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
+    "redux-thunk": "^2.1.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "webpack-dev-middleware": "^1.6.1",
