update lint rule to accommondate carbon3d files

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,6 @@
 {
   "parser": "babel-eslint",
   "extends": [
-    "standard",
     "standard-react"
   ],
   "plugins": [
@@ -20,8 +19,7 @@
   },
   "rules": {
     "key-spacing"          : 0,
-    "jsx-quotes"           : [2, "prefer-single"],
-    "max-len"              : [2, 120, 2],
+    "jsx-quotes"           : [2, "prefer-double"],
     "object-curly-spacing" : [2, "always"]
   }
 }
