--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,10 @@
   },
   "rules": {
     "key-spacing"          : 0,
-    "jsx-quotes"           : [2, "prefer-double"],
+    "jsx-quotes"           : 1,
+    "react/jsx-indent"     : 1,
+    "react/jsx-space-before-closing": 1,
+    "react/self-closing-comp": 1,
     "object-curly-spacing" : [2, "always"]
   }
 }
