--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
       "command": "npm run deploy",
       "env": {
         "NODE_ENV": "production",
+        "PORT": 8888,
         "DEBUG": "app:*"
       }
     },
