--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
+    "l20n": "^4.0.0-alpha.3",
     "lodash": "^4.16.4",
     "mocha": "^3.0.1",
     "moment": "^2.15.1",
