--- a/package.json
+++ b/package.json
@@ -76,59 +76,50 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-runtime": "^6.11.6",
-    "better-npm-run": "0.0.11",
-    "css-loader": "^0.25.0",
-    "cssnano": "^3.7.4",
-    "debug": "^2.2.0",
-    "extract-text-webpack-plugin": "^1.0.0",
-    "file-loader": "^0.9.0",
-    "fs-extra": "^0.30.0",
-    "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.6.5",
-    "ip": "^1.1.2",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.7.0",
-    "normalize.css": "^4.1.1",
-    "postcss-loader": "^0.13.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.0.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "yargs": "^5.0.0"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.16.0",
-    "babel-eslint": "^6.0.0-beta.6",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.5",
     "babel-plugin-istanbul": "^2.0.1",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-runtime": "^6.11.6",
+    "better-npm-run": "^0.0.13",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
     "chai-enzyme": "^0.5.0",
     "cheerio": "^0.20.0",
     "codecov": "^1.0.1",
     "connect-history-api-fallback": "^1.3.0",
+    "css-loader": "^0.25.0",
+    "cssnano": "^3.7.4",
+    "debug": "^2.2.0",
     "enzyme": "^2.0.0",
     "eslint": "^3.0.1",
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-promise": "^3.3.0",
     "eslint-plugin-react": "^6.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.0",
+    "file-loader": "^0.9.0",
+    "fs-extra": "^0.30.0",
+    "html-webpack-plugin": "^2.22.0",
+    "imports-loader": "^0.6.5",
+    "ip": "^1.1.2",
     "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.4",
     "karma": "^1.0.0",
     "karma-coverage": "^1.0.0",
     "karma-mocha": "^1.0.1",
@@ -138,14 +129,22 @@
     "lodash": "^4.16.4",
     "mocha": "^3.0.1",
     "moment": "^2.15.1",
+    "node-sass": "^3.7.0",
     "nodemon": "^1.10.2",
+    "normalize.css": "^4.1.1",
     "phantomjs-prebuilt": "^2.1.12",
+    "postcss-loader": "^0.13.0",
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
-    "redux-thunk": "^2.1.0",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "yargs": "^5.0.0"
   }
 }
