--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
+    "react-router-scroll": "^0.3.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
